--- a/style.css
+++ b/style.css
@@ -1,14 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins:wght@300&display=swap');
 
 * {
-    background: #586875;
-    margin: 0;
+    background: #202020;
     padding: 0;
     border: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
-main h1 {
+div.navbar {
+    padding-top: 40px;
+    font-size: 1.5rem;
+    display: flex;
+    color: rgb(170, 170, 170);
+    justify-content: space-around;
+}
+
+/* div.name {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 3rem;
+    text-transform: uppercase;
+    width: 100%;
+    height: 20vh;
+    background-color: white;
+    color: #202020;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+} */
+
+div.name h1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-transform: uppercase;
+    font-size: 5rem;
+    user-select: none;
     color: white;
+    background: repeating-linear-gradient(-45deg, red 0%, yellow 7.14%, rgb(0, 255, 0) 14.28%,
+            rgb(0, 255, 255) 21.4%, cyan 28.56%, blue 35.7%, magenta 42.84%, red 50%);
+    background-size: 600vw 600vw;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    animation: slide 10s linear infinite forwards;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes slide {
+    0% {
+        background-position-x: 0%;
+    }
+
+    100% {
+        background-position-x: 600vw;
+    }
 }
